# unmuzzle-hub

./: AGENTS.md  LICENSE  README.md  SPEC.md  TAKEDOWN.md  pyproject.toml
.github/workflows/: e2e-verify.yml  publish-auto-merge.yml  site.yml  test.yml
docs/: index.html  zh.html
index/: index.json  operators.json  publishers.json
index/models/: ci-test__broken.json  ci-test__broken2.json  unmuzzle__qwen2.5-14b-abliterated.json  unmuzzle__qwen2.5-14b-honesty-lora.json  unmuzzle__qwen2.5-72b-honesty-lora.json  unmuzzle__qwen2.5-7b-honesty.json  unmuzzle__r1-distill-32b-honesty-lora.json
scripts/: build_site.py  check_site.py  sign_operators.py  validate_pr.py  verify_release.py  visual_review.sh
tests/: conftest.py  helpers.py  test_api.py  test_download.py  test_e2e.py  test_hfcache.py  test_index.py  test_trust.py
unmuzzle/: __init__.py  api.py  cli.py  download.py  hfcache.py  index.py  mcp_server.py  publish.py  sign.py  torrent.py  trust.py
