[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "unmuzzle"
version = "0.3.0"
description = "Censorship-resistant distribution for open-weight models. BitTorrent + HTTP mirrors, signed checksums, Hugging Face cache compatible."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jiajun Zeng" }]
keywords = ["llm", "open-weights", "bittorrent", "distribution", "censorship-resistant"]

[project.scripts]
unmuzzle = "unmuzzle.cli:main"
unmuzzle-mcp = "unmuzzle.mcp_server:main"

[project.optional-dependencies]
dev = ["pytest>=7"]
mcp = ["mcp>=1.2"]

[tool.setuptools.packages.find]
include = ["unmuzzle*"]
